--- a/app/templates/ingredients.hbs
+++ b/app/templates/ingredients.hbs
@@ -1,7 +1,9 @@
+<h2>Ingredients in stew recipes, filtered by:</h2>
+
 {{#display-names array=filter1}}
-  Ingredients that have Jamaican Oxtail Stew as recipe
+  A simple promise
 {{/display-names}}
 
 {{#display-names array=filter2}}
-  Ingredients that have Jamaican Oxtail Stew as recipe
+  With <code>PromiseArray</code> and <code>RSVP.filter</code>
 {{/display-names}}
